--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -124,6 +124,9 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - uses: actions/setup-node@v2
+      with:
+        node-version: 'lts/*'    
     - run: ${{ github.action_path }}/setup.sh
       shell: bash
     - run: ${{ github.action_path }}/system-status.sh
