--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -120,15 +120,18 @@ inputs:
     default: 'ci.startup.sh'
   ci_postrun_script:
     description: 'Script to run prior to saving the artifacts'
-    default: 'ci.postrun.sh'    
+    default: 'ci.postrun.sh'
+
 runs:
   using: "composite"
   steps:
     - uses: actions/setup-node@v2
       with:
-        node-version: 'lts/*'    
+        node-version: 'lts/*'
+    - run: echo "MANIFEST=abcd" >> $GITHUB_ENV
+      shell: bash          
     - run: ${{ github.action_path }}/setup.sh
-      shell: bash
+      shell: bash 
     - run: ${{ github.action_path }}/system-status.sh
       shell: bash      
     - run: echo "[TODO] Set environment variables from parameters"
