--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -133,8 +133,11 @@ runs:
     - run: | 
         echo "Install needed packages"
         npm install -g jahia-reporter
-      shell: bash        
-    - run: | 
+      shell: bash
+
+    # Set the environment variables necessary for the docker-compose run
+    # These are declared here to avoid having to repeat in multiple steps
+    - run: |
         echo "Set environment variables from parameters"
         echo "MANIFEST=${{ inputs.tests_manifest }}" >> $GITHUB_ENV
         echo "JAHIA_IMAGE=${{ inputs.jahia_image }}" >> $GITHUB_ENV
@@ -163,8 +166,11 @@ runs:
         echo "Prepare export folder"
         mkdir -p ${{ inputs.tests_path }}artifacts
       shell: bash
+  
+    # Login to the docker registry is needed to access some images (snapshots, ...)
     - run: echo "${{ inputs.docker_password }}" | docker login -u "${{ inputs.docker_username }}" --password-stdin
       shell: bash
+
     - run: |
         if [ ${{ inputs.should_skip_artifacts }} == false ]; then
           echo "Preparing build artifacts"
@@ -178,8 +184,13 @@ runs:
           ls -lah ${{ inputs.tests_path }}artifacts
         fi   
       shell: bash
+
+    # We always build the test container from scratch
+    # Docker layer caching makes this quick if it was already previously built
+    # To test a previous release, a specific branch can be provided      
     - run: |
         if [ ${{ inputs.should_build_testsimage }} == true ]; then
+          echo "Build the tests image"
           cd ${{ inputs.tests_path }}
           if [[ "${{ inputs.tests_container_branch }}" != "" ]]; then
             git checkout ${{ inputs.tests_container_branch }}
@@ -188,3 +199,82 @@ runs:
           docker save -o tests_image.tar ${{ inputs.tests_image }}
         fi    
       shell: bash
+
+    # Pull the latest version of ${JAHIA_IMAGE}  
+    - run: |
+        echo "Pull the latest version of Jahia and print docker images cache to console"
+        cd ${{ inputs.tests_path }}
+        . ./set-env.sh
+        echo "List of docker images in local cache PRIOR pull" > ./artifacts/docker.log
+        docker images --digests --all 2>&1 | tee -a ./artifacts/docker.log
+        echo "--------------------------------------------------" >> ./artifacts/docker.log
+        docker pull ${JAHIA_IMAGE}
+        echo "List of docker images in local cache AFTER pull" >> ./artifacts/docker.log
+        docker images --digests --all 2>&1 | tee -a ./artifacts/docker.log
+        echo "--------------------------------------------------" >> ./artifacts/docker.log  
+      shell: bash      
+
+    # Run a background task to display the running containers and their hash
+    # This is used to verify that the right containers are running
+    # Sleep 30s to give containers time to start
+    # - run: |
+    #     cd ${{ inputs.tests_path >>
+    #     sleep 30
+    #     docker ps --all --no-trunc 2>&1 | tee -a ./artifacts/docker.log
+    #   shell: bash 
+
+    # Using abort-on-container-exit will exit on first container failure, which
+    # for us will be the test container
+    - run: |
+        echo "Spin-up the containers"
+        export DOCKER_CLIENT_TIMEOUT=120
+        export COMPOSE_HTTP_TIMEOUT=120
+        . ./set-env.sh
+        if [[ -f "${{ inputs.ci_startup_script }}" ]]; then
+          echo "Startup script is present"
+          bash ${{ inputs.ci_startup_script }}
+        else
+          docker-compose -f ${{ inputs.docker_compose_file }} up --abort-on-container-exit
+        fi         
+      shell: bash  
+
+    - run: |
+        echo "Export containers artifacts (reports, secreenshots, videos)"
+        cd ${{ inputs.tests_path }}
+        docker cp ${{ inputs.tests_container_name }}:/home/jahians/results ./artifacts         
+      shell: bash       
+
+    # Running logs with -t adds a timestamp, this might feel redundant with the timestamp provided
+    # by directly jahia but this allows for easy comparison between various containers that might
+    # have their timezone set differently
+    - run: |
+        echo "Export containers logs"
+        cd ${{ inputs.tests_path }}
+        docker-compose logs -t --tail="all" > ./artifacts/results/all-containers.log
+        docker logs jahia > ./artifacts/results/jahia.log
+        docker logs ${{ inputs.tests_container_name }} > ./artifacts/results/${{ inputs.tests_container_name }}.log
+        cp ./artifacts/docker.log ./artifacts/results/       
+    shell: bash
+
+    - run: |
+        echo "Analyze Test results"
+        cd ${{ inputs.tests_path }}
+        if [[ ! -e ./artifacts/results/test_success ]]; then
+          echo "More than one failure found, sending exit signal"
+          exit 1
+        fi     
+    shell: bash      
+
+    # If a ci.postrun.sh script is present, this script is executed
+    # The main purpose of this script is to export additional artifacts,
+    # capture logs from other containers, ...    
+    - run: |
+        cd ${{ inputs.tests_path }}
+        export DOCKER_CLIENT_TIMEOUT=120
+        export COMPOSE_HTTP_TIMEOUT=120
+        . ./set-env.sh
+        if [[ -f "${{ inputs.ci_postrun_script }}" ]]; then
+          echo "Postrun script is present"
+          bash ${{ inputs.ci_postrun_script }}
+        fi      
+    shell: bash
