--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -137,7 +137,8 @@ runs:
 
     # Set the environment variables necessary for the docker-compose run
     # These are declared here to avoid having to repeat in multiple steps
-    - run: |
+    - name: Set environment variables from parameters
+      run: |
         echo "Set environment variables from parameters"
         echo "MANIFEST=${{ inputs.tests_manifest }}" >> $GITHUB_ENV
         echo "JAHIA_IMAGE=${{ inputs.jahia_image }}" >> $GITHUB_ENV
@@ -226,6 +227,7 @@ runs:
     # Using abort-on-container-exit will exit on first container failure, which
     # for us will be the test container
     - run: |
+        cd ${{ inputs.tests_path }}
         echo "Spin-up the containers"
         export DOCKER_CLIENT_TIMEOUT=120
         export COMPOSE_HTTP_TIMEOUT=120
@@ -272,7 +274,6 @@ runs:
         cd ${{ inputs.tests_path }}
         export DOCKER_CLIENT_TIMEOUT=120
         export COMPOSE_HTTP_TIMEOUT=120
-        ls -lah
         . ./set-env.sh
         if [[ -f "${{ inputs.ci_postrun_script }}" ]]; then
           echo "Postrun script is present"
